# Antifraud-api

./: .dockerignore  Dockerfile  Dockerfile.app  Dockerfile.tests  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
prometheus/: prometheus.yml
src/antifraud_service/: main.py  metrics.py  models.py  redis_client.py
tests/unit/: test_main.py
