[project]
name = "your-project"
version = "0.1.0"
description = "Your FastAPI project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.109.2",
    "pydantic==2.6.0",
    "python-dateutil==2.8.2",
    "uvicorn==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.1",
    "httpx==0.27.0",
]

# Упрощенная система сборки для приложения (не пакета)
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Указываем, что это не пакет для установки
[tool.setuptools]
py-modules = []
packages = []
include-package-data = false
zip-safe = false

# Настройки UV для китайского зеркала
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"