[project]
name = "antifraud-service"
version = "0.1.0"
description = "FastAPI antifraud service"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.109.2",
    "pydantic==2.6.0",
    "python-dateutil==2.8.2",
    "uvicorn==0.27.0",
    "redis[async]==5.0.1"  # <-- Это правильная зависимость
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.1",
    "httpx==0.27.0",
]

# Упрощенная система сборки
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"