[project]
name = "antifraud-service"
version = "0.1.0"
description = "FastAPI antifraud service"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.109.2",
    "pydantic==2.6.0",
    "python-dateutil==2.8.2",
    "uvicorn==0.27.0",
    "redis==5.0.1",
    "prometheus-client==0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.1",
    "httpx==0.27.0",
]

